--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "newsapi": "^2.4.0",
     "sqlite": "^3.0.3",
     "sqlite-sync": "^0.3.8",
-    "sqlite3": "^4.0.9"
+    "sqlite3": "^4.0.9",
+    "textrank": "^1.0.5"
   },
   "devDependencies": {},
   "scripts": {
