--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.0",
   "description": "colocar dps",
   "main": "index.js",
+  "test": "index.js",
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.18.3",
