--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
     "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "newsapi": "^2.4.0",
-    "sqlite": "^3.0.3",
-    "sqlite-sync": "^0.3.8",
-    "sqlite3": "^4.0.9",
-    "textrank": "^1.0.5"
+    "newsapi": "^2.4.0"
   },
   "devDependencies": {},
   "scripts": {
