--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: node_js
-
-node_js: 
+node_js:
   - "10"
 
 before_install:
@@ -8,3 +7,6 @@ before_install:
 cache:
   directories:
     - "node_modules"
+before_script:
+  - sleep 10
+  - "npm start"
